# data/requests/order_item_req.go
@@ -1,0 +1,6 @@
+package requests
+
+type CreateOrderItemRequest struct {
+	ProductID uint `json:"product_id" binding:"required"`
+	Quantity  uint `json:"quantity" binding:"required"`
+}
