# router/router.go
@@ -1,6 +1,7 @@
 package router
 
 import (
+	ordercontroller "github.com/ayoadeoye1/insta-shop-screening/controller/order_controller"
 	productcontroller "github.com/ayoadeoye1/insta-shop-screening/controller/product_controller"
 	usercontroller "github.com/ayoadeoye1/insta-shop-screening/controller/user_controller"
 	"github.com/ayoadeoye1/insta-shop-screening/middleware"
@@ -11,7 +12,7 @@ import (
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
-func SetupRouter(userController *usercontroller.UserController, productController *productcontroller.ProductController) *gin.Engine {
+func SetupRouter(userController *usercontroller.UserController, productController *productcontroller.ProductController, orderController *ordercontroller.OrderController) *gin.Engine {
 	routes := gin.Default()
 
 	// routes.Use(cors.New(cors.Config{
@@ -50,6 +51,20 @@ func SetupRouter(userController *usercontroller.UserController, productControlle
 			productRouter.POST("/create", productController.CreateNewProduct)
 			productRouter.PUT("/:id", productController.UpdateProduct)
 			productRouter.DELETE("/:id", productController.DeleteProduct)
+		}
+	}
+
+	orderRouter := version.Group("/order")
+	{
+		orderRouter.Use(middleware.UserAuth)
+		{
+			orderRouter.POST("/create", orderController.CreateOrder)
+			orderRouter.GET("/all", orderController.GetUserOrders)
+			orderRouter.PUT("/cancel/:id", orderController.CancelOrder)
+		}
+		orderRouter.Use(middleware.AdminAuth)
+		{
+			orderRouter.PUT("/change/status", orderController.UpdateOrderStatus)
 		}
 	}
 
